2006-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* index.php:
	updated NEWS

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.16

	* definitions.inc:
	updated for 2.5.16

2006-01-14  Viktor Griph  <griph@dd.chalmers.se>

	* documentation/manpages/manpages2php:
	changed to ignore autom4te.cache-files
	* documentation/manpages/unstable/*.php
	regenerated

	* news/index.php:
	regenerated

2006-01-14  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* index.php:
	updated NEWS

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.15

	* definitions.inc:
	updated for 2.5.15

2005-09-23  Viktor Griph  <griph@dd.calmers.se>

	* screenshots/vectorbuttons/decor_demo.fvwmrc:
	updated to close demo windows, and clean up fvwm after run
	removed hardcoded directory

	* screenshots/vectorbuttons/create_fvwm_script.awk:
	added USAGE comment

	* screenshots/vectorbuttons/vectorbutton*.gif:
	* screenshots/vectorbuttons/vectorbuttonlist.inc:
	regenerated

2005-08-28  Mikhael Goikhman  <migo@homemail.com>

	* documentation/manpages/manpages2php:
	* documentation/manpages/unstable/*.php:
	* documentation/perllib/perllib2php:
	* documentation/perllib/unstable/*.php:
	regenerate documentation pages for 2.5.14

2005-08-25  Viktor Griph  <griph@dd.calmers.se>

	* news/news2php:
	% characters in output escaped to make printf work with % characters
	in NEWS
	hang indented lines in NEWS will now be generated as a nestled list

	* news/index.php:
	regenerated

2005-08-24  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* index.php:
	updated News

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated

	* definitions.inc:
	updated for 2.5.14

2005-08-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* features.php:
	* index.php:
	corrected typos

	* index.php:
	removed the ugly starburst effect from logo

2005-08-03  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
