@@ -1,3 +1,9 @@
+2006-04-02  Mikhael Goikhman  <migo@homemail.com>
+
+	* index.php:
+	* contact/index.php:
+	update url of mailing list archives
+
 2006-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* index.php:
